--- a/inventory.ini
+++ b/inventory.ini
@@ -2,6 +2,6 @@
 172.31.27.43
 
 [web:vars]
-COURSE: "Ansible"
-DURATION: "10HRS"
-TRAINER: "Sivakumar Reddy M"
+COURSE="Ansible"
+DURATION="10HRS"
+TRAINER="Sivakumar Reddy M"
