--- a/inventory.ini
+++ b/inventory.ini
@@ -1,7 +1,22 @@
+192.168.1.1
+192.168.1.2
+198.168.1.3
+
+
 [web]
-172.31.27.43
+172.31.87.43
 
 [web:vars]
 COURSE="Ansible"
 DURATION="10HRS"
 TRAINER="Sivakumar Reddy M"
+
+[backend]
+192.168.1.4
+192.168.1.5
+192.168.1.6
+
+[mysql]
+192.168.1.7
+192.168.1.8
+192.168.1.9
