--- a/inventory.ini
+++ b/inventory.ini
@@ -20,3 +20,11 @@ TRAINER="Sivakumar Reddy M"
 192.168.1.7
 192.168.1.8
 192.168.1.9
+
+[servers:childeren]
+web
+backend
+
+[all:vars]
+ansible_user=ec2-user
+ansible_password=DevOps321
