--- a/inventory.ini
+++ b/inventory.ini
@@ -21,10 +21,10 @@ TRAINER="Sivakumar Reddy M"
 192.168.1.8
 192.168.1.9
 
-# [servers:childeren]
-# web
-# backend
+[servers:children]
+web
+backend
 
-# [all:vars]
-# ansible_user=ec2-user
-# ansible_password=DevOps321
+[all:vars]
+ansible_user=ec2-user
+ansible_password=DevOps321
