--- a/inventory.ini
+++ b/inventory.ini
@@ -11,17 +11,10 @@ COURSE="Ansible"
 DURATION="10HRS"
 TRAINER="Sivakumar Reddy M"
 
-[backend]
-192.168.1.4
-192.168.1.5
-192.168.1.6
-
-[mysql]
-192.168.1.7
-192.168.1.8
-192.168.1.9
 
 [servers:children]
 web
 backend
 
+[local]
+localhost
