--- a/11-data-types.yaml
+++ b/11-data-types.yaml
@@ -1,6 +1,6 @@
 - name: devops course information
   hosts: local
-  connecton: local
+  connection: local
   vars:
     course: devops
     duration: 120HRS #number
