--- a/12-conditions.yaml
+++ b/12-conditions.yaml
@@ -7,7 +7,7 @@
     private: false #not confidential
   tasks:
   - name: print this if less than 10
-    ansible.builtin.debus:
+    ansible.builtin.debug:
       msg: "Given number {{ number }} less than 10"
     when: number < 10 #conditional statement
 
