--- a/13-conditions1.yaml
+++ b/13-conditions1.yaml
@@ -5,6 +5,7 @@
   - name: check user exist or not
     ansible.builtin.command: id expense
     register: USER # here USER is variable that gets output from above command
+    ignore_errors: true
 
   - name: print the user info
     ansible.builtin.debug:
