--- a/16-loops.yaml
+++ b/16-loops.yaml
@@ -1,13 +1,14 @@
 - name: loops demo
-  hosts: local
-  connection: local
+  hosts: web
+  become: yes
   tasks:
-  - name: print the names
-    ansible.builtin.debug:
-      msg: " Hello {{ item }}"
+  - name: install packages
+    ansible.builtin.package:
+      name: "{{ item }}"
+      state: present
     loop:
-    - Ramu
-    - Chinna
-    - Mohan
-    - Sai
-    - Vasu
+    - mysql
+    - nginx
+    - postfix
+    - httpd
+    
