--- a/16-loops.yaml
+++ b/16-loops.yaml
@@ -4,11 +4,11 @@
   tasks:
   - name: install packages
     ansible.builtin.package:
-      name: "{{ item }}"
-      state: present
+      name: "{{ item.name }}"
+      state: "{{ item.state}}"
     loop:
-    - mysql
-    - nginx
-    - postfix
-    - httpd
+    - { name: 'mysql', state: 'present' } 
+    - { name: 'nginx', state: 'absent' } 
+    - { name: 'postfix', state: 'absent' } 
+    - { name: 'httpd', state: 'present' } 
     
