--- a/17-filters.yaml
+++ b/17-filters.yaml
@@ -4,4 +4,4 @@
   tasks:
   - name: print the default variable
     ansible.builtin.debug:
-      msg: "Hello {{ course | Ansible }}"
+      msg: "Hello {{ course | default(Ansible) }}"
