--- a/17-filters.yaml
+++ b/17-filters.yaml
@@ -5,3 +5,8 @@
   - name: print the default variable
     ansible.builtin.debug:
        msg: "Hello {{ course | default('Ansible') }}"
+  - name: convert to uppercase
+    vars:
+      greeting: "Hello Ram"
+    ansible.builtin.debug:
+       msg: " {{ greeting | upper }}"
