--- a/17-filters.yaml
+++ b/17-filters.yaml
@@ -23,3 +23,9 @@
       numbers: [1,2,4,56,4,1]
     ansible.builtin.debug:
        msg: " {{ numbers | unique }}"
+
+  - name: get the min and max value
+    vars:
+      numbers: [1,2,56,143]
+    ansible.builtin.debug:
+       msg: " Min: {{ numbers | min }}, Max: {{ numbers | max }}"
