--- a/17-filters.yaml
+++ b/17-filters.yaml
@@ -29,3 +29,12 @@
       numbers: [1,2,56,143]
     ansible.builtin.debug:
        msg: " Min: {{ numbers | min }}, Max: {{ numbers | max }}"
+
+  - name: convert map to list
+    vars:
+      course:
+        name: "DevOps with Siva"
+        duration: 120
+        trainer: "Sivakumar Reddy"
+    ansible.builtin.debug:
+       msg: " {{ course | dict2items }}"
