--- a/17-filters.yaml
+++ b/17-filters.yaml
@@ -38,3 +38,12 @@
         trainer: "Sivakumar Reddy"
     ansible.builtin.debug:
        msg: " {{ course | dict2items }}"
+
+  - name: convert list to map
+    vars:
+      course:
+      - {'key': 'name', 'value': 'DevOps with Siva'}
+      - {'key': 'duration', 'value': 120}
+      - {'key': 'trainer', 'value': 'Sivakumar Reddy'}
+    ansible.builtin.debug:
+       msg: " {{ course | items2dict }}"
