--- a/17-filters.yaml
+++ b/17-filters.yaml
@@ -47,3 +47,9 @@
       - {'key': 'trainer', 'value': 'Sivakumar Reddy'}
     ansible.builtin.debug:
        msg: " {{ course | items2dict }}"
+
+  - name: check the ip address
+    vars:
+      myip: 192.168.1.2
+    ansible.builtin.debug:
+       msg: " {{ myip | ansible.utils.ipv4}}"
