--- a/18-command-vs-shell.yaml
+++ b/18-command-vs-shell.yaml
@@ -3,4 +3,4 @@
   connection: local
   vars:
   - name: execute the command
-    ansible.builtin.debug: ls -ltr > /tmp/output.txt
+    ansible.builtin.command: ls -ltr > /tmp/output.txt
