--- a/18-command-vs-shell.yaml
+++ b/18-command-vs-shell.yaml
@@ -6,5 +6,5 @@
     ansible.builtin.shell: ls -ltr > /tmp/output.txt #login to the server and execute the command inside
     # command module just issues the command
   - name: check the process
-    ansible.builtin.command: ps -ef | grep ssh
+    ansible.builtin.shell: ps -ef | grep ssh
     register: output
