--- a/21-created-ec2-r53.yaml
+++ b/21-created-ec2-r53.yaml
@@ -1,6 +1,6 @@
 - name: create ec2 and r53 records
   hosts: local
-  connection: local
+  # connection: local
   vars:
     vpc_subnet_id: subnet-01fbf6e1855134a9b
     sg_id: sg-0a714463406c3c662
