--- a/21-created-ec2-r53.yaml
+++ b/21-created-ec2-r53.yaml
@@ -2,7 +2,7 @@
   hosts: local
   connection: local
   vars:
-    vpc_subnet_id: "subnet-01fbf6e1855134a9b"
+    subnet_id: "subnet-01fbf6e1855134a9b"
     sg_id: "sg-0a714463406c3c662"
     amd_id: "ami-09c813fb71547fc4f"
     instances:
@@ -14,7 +14,7 @@
   - name: create ec2 instance
     amazon.aws.ec2_instance:
       name: "{{ item }}"
-      vpc_subnet_id: "{{ vpc_subnet_id }}"
+      vpc_subnet_id: "{{ subnet_id }}"
       instance_type: "t2.micro"
       security group: "{{ sg_id }}"
       image_id: "{{ amd_id }}"
