--- a/21-created-ec2-r53.yaml
+++ b/21-created-ec2-r53.yaml
@@ -15,10 +15,19 @@
     amazon.aws.ec2_instance:
       name: "{{ item }}"
       vpc_subnet_id: "{{ subnet_id }}"
-      instance_type: "t2.micro"
-      security group: "{{ sg_id }}"
-      image_id: "{{ amd_id }}"
+      instance_type: "t3.micro"
+      security_group: "{{ sg_id }}"
+      image_id: "{{ ami_id }}"
     loop: "{{ instances }}"
     register: ec2_instances
+  # - name: create ec2 instance
+  #   amazon.aws.ec2_instance:
+  #     name: "{{ item }}"
+  #     vpc_subnet_id: "{{ subnet_id }}"
+  #     instance_type: "t2.micro"
+  #     security group: "{{ sg_id }}"
+  #     image_id: "{{ amd_id }}"
+  #   loop: "{{ instances }}"
+  #   register: ec2_instances
 
 
