--- a/21-created-ec2-r53.yaml
+++ b/21-created-ec2-r53.yaml
@@ -13,7 +13,8 @@
   tasks:
   - name: create ec2 instance
     amazon.aws.ec2_instance:
-      name: "{{ subnet_id }}"
+      name: "{{ item }}"
+      vpc_subnet_id: "{{ subnet_id }}"
       instance_type: "t2.micro"
       security_group: "{{ sg_id }}"
       image_id: "{{ ami_id }}"
