--- a/21-created-ec2-r53.yaml
+++ b/21-created-ec2-r53.yaml
@@ -20,6 +20,12 @@
       image_id: "{{ ami_id }}"
     loop: "{{ instances }}"
     register: ec2_instances
+  - name: print the output
+    ansible.builtin.debug:
+      msg: "{{ ec2_instances }}"
+
+
+
   # - name: create ec2 instance
   #   amazon.aws.ec2_instance:
   #     name: "{{ item }}"
