--- a/21-created-ec2-r53.yaml
+++ b/21-created-ec2-r53.yaml
@@ -9,6 +9,7 @@
     - frontend
     - backend
     - mysql
+    zone: daws82s.shop
 
   tasks:
   - name: create ec2 instance
@@ -23,6 +24,18 @@
   - name: print the output
     ansible.builtin.debug:
       msg: "{{ ec2_instances }}"
+
+  - name: create r53 record
+    amazon.aws.route53:
+      state: present
+      zone: "{{ zone }}"
+      record: "{{ item.item }}.{{ zone }}"
+      type: A
+      ttl: 1
+      value: "{{ item.instances[0].private_ip_address }}"
+      wait: true
+      overwrite: true
+    loop: "{{ ec2_instances.results }}"
 
 
 
