--- a/21-created-ec2-r53.yaml
+++ b/21-created-ec2-r53.yaml
@@ -37,6 +37,19 @@
       overwrite: true
     loop: "{{ ec2_instances.results }}"
 
+  - name: create r53 record with public ip address
+    amazon.aws.route53:
+      state: present
+      zone: "{{ zone }}"
+      record: "{{ zone }}"
+      type: A
+      ttl: 1
+      value: "{{ item.instances[0].public_ip_address }}"
+      wait: true
+      overwrite: true
+    loop: "{{ ec2_instances.results }}"
+    when: item.item=frontend
+
 
 
   # - name: create ec2 instance
