--- a/21-created-ec2-r53.yaml
+++ b/21-created-ec2-r53.yaml
@@ -48,7 +48,7 @@
       wait: true
       overwrite: true
     loop: "{{ ec2_instances.results }}"
-    when: item.item=frontend
+    when: item.item == "frontend"
 
 
 
